--- a/Python/Python_Stats/Stats_1.ipynb
+++ b/Python/Python_Stats/Stats_1.ipynb
@@ -4,6 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -101,7 +102,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "h4X9d49CfovS"
       },
@@ -137,9 +138,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 337
         },
-        "outputId": "fcefce79-8da0-4f83-9f32-e3bd68396ef2"
+        "outputId": "0a96d5e5-7af6-4a1b-f681-44702c784f56"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "display_data",
@@ -184,9 +185,10 @@
         "# DataFrameの作成\n",
         "data = {\n",
         "    \"year\" : np.arange(1986,2016),\n",
-        "    \"WinTeam\" : [\"広島\",\"巨人\",\"中日\",\"巨人\",\"巨人\",\"広島\",\"ヤクルト\",\"ヤクルト\",\"巨人\",\"ヤクルト\",\n",
-        "                 \"巨人\",\"ヤクルト\",\"横浜\",\"中日\",\"巨人\",\"ヤクルト\",\"巨人\",\"阪神\",\"中日\",\"阪神\",\n",
-        "                 \"中日\",\"巨人\",\"巨人\",\"巨人\",\"中日\",\"中日\",\"巨人\",\"巨人\",\"巨人\",\"ヤクルト\"]\n",
+        "    \"WinTeam\" : [\"広島\",\"巨人\",\"中日\",\"巨人\",\"巨人\",\"広島\",\"ヤクルト\",\"ヤクルト\",\n",
+        "                 \"巨人\",\"ヤクルト\",\"巨人\",\"ヤクルト\",\"横浜\",\"中日\",\"巨人\",\"ヤクルト\",\n",
+        "                 \"巨人\",\"阪神\",\"中日\",\"阪神\",\"中日\",\"巨人\",\"巨人\",\"巨人\",\n",
+        "                 \"中日\",\"中日\",\"巨人\",\"巨人\",\"巨人\",\"ヤクルト\"]\n",
         "}\n",
         "\n",
         "df = pd.DataFrame(data)\n",
@@ -198,9 +200,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 990
         },
-        "outputId": "ca37408c-607c-4f01-8a5a-424d0d0a8fc6"
+        "outputId": "f97b1897-6510-41cc-f076-804644915d68"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -240,7 +242,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-1298cce5-5f9b-4ec9-9437-e2faa31bd51d\">\n",
+              "  <div id=\"df-71ecbfa5-313c-4538-8c56-45d57fdc68cf\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -418,7 +420,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1298cce5-5f9b-4ec9-9437-e2faa31bd51d')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-71ecbfa5-313c-4538-8c56-45d57fdc68cf')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -469,12 +471,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-1298cce5-5f9b-4ec9-9437-e2faa31bd51d button.colab-df-convert');\n",
+              "          document.querySelector('#df-71ecbfa5-313c-4538-8c56-45d57fdc68cf button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-1298cce5-5f9b-4ec9-9437-e2faa31bd51d');\n",
+              "          const element = document.querySelector('#df-71ecbfa5-313c-4538-8c56-45d57fdc68cf');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -509,7 +511,7 @@
         "\n",
         "plt.xlabel(\"優勝チーム\" ,labelpad=16 , fontsize = 14 , x=0.5)\n",
         "plt.ylabel(\"チーム数\" ,fontsize=14 , rotation=\"horizontal\" , y=1.05)\n",
-        "plt.title(\"図2 優勝チームの棒グラフ\" , x=0.5 , y=-0.35 , fontsize = 16)    # タイトル移動しないですね…\n",
+        "plt.title(\"図2 優勝チームの棒グラフ\" , x=0.5 , y=-0.35 , fontsize = 16)    \n",
         "\n",
         "plt.show()    # 巨人強い！"
       ],
@@ -519,9 +521,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 414
         },
-        "outputId": "3f370fe4-5ab5-4eb8-ac25-c562670571de"
+        "outputId": "81639485-847d-4391-d628-93cb6c37ff75"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "display_data",
@@ -542,7 +544,7 @@
       "source": [
         "## 代表値\n",
         "数値データを端的に表す値のことを**代表値**といいます。  \n",
-        "主に**平均値**、**中央値**、**最頻値（モード）**といいます。"
+        "主に**平均値**、**中央値**、**最頻値**（**モード**）といいます。"
       ],
       "metadata": {
         "id": "JNi8edp50ZWQ"
@@ -640,7 +642,7 @@
       "metadata": {
         "id": "UpcMtvdh7EyE"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -655,9 +657,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7d79fb25-21ae-4671-9e76-fc1297e79a04"
+        "outputId": "a703713c-e821-4205-959a-342c137c7d02"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -681,9 +683,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "80ff8b9e-9b52-4ea2-e005-dfca202e1b44"
+        "outputId": "13ffb7c8-0c9b-4cfd-dd1e-7eaa8ee22184"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -699,7 +701,7 @@
       "cell_type": "code",
       "source": [
         "# 最頻値の導出\n",
-        "mode, count = stats.mode(df[\"point\"])    # 最頻値 , カウント数\n",
+        "mode, count = stats.mode(df[\"point\"])  # 最頻値 , カウント数\n",
         "print(mode)\n",
         "print(count)"
       ],
@@ -708,9 +710,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "bfea248d-fee2-4e20-fedc-674594c4793c"
+        "outputId": "da02bdb0-91f1-4056-d771-e76cc00ccde7"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -726,7 +728,8 @@
       "cell_type": "markdown",
       "source": [
         "## 散布度\n",
-        "各データの値に差が大きい場合は、全体の性質を説明するために「データの散らばり」を指票とする必要があります。\n",
+        "各データの値に差が大きい場合は、全体の性質を説明するために  \n",
+        "「データの散らばり」を指票とする必要があります。\n",
         "\n",
         "この「データの散らばり具合」を**散布度**といいます。  \n"
       ],
@@ -791,7 +794,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "平均±標準偏差の間にどのくらいのデータが入っているのか、感覚値として覚えておくとイメージがつきやすいでしょう。\n",
+        "平均$±$標準偏差の間にどのくらいのデータが入っているのか、  \n",
+        "感覚値として覚えておくとイメージがつきやすいでしょう。\n",
         "\n"
       ],
       "metadata": {
@@ -833,9 +837,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e7a3df65-d483-490c-ae5f-6059a8ea139f"
+        "outputId": "a1f51c1b-c0fe-4777-dd06-e909b66f4627"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -865,9 +869,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "439f1412-3a02-45cc-9b3e-3a12ad03e9d7"
+        "outputId": "2d1e6541-08e8-4ed2-e1a2-61cf4ea51433"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -892,9 +896,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "61f8d1d9-9215-4ae1-8b2c-bbc972e8b8c0"
+        "outputId": "e3b65d49-e849-4c36-f396-9cc07c0fcda3"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -911,19 +915,98 @@
     {
       "cell_type": "markdown",
       "source": [
-        "データの変化による平均値・分散の変化については[こちら](https://bit.ly/3flfAHm)が大変分かりやすいと思います。"
+        "## 期待値と分散の性質"
       ],
       "metadata": {
-        "id": "9tr90o-FsM-O"
+        "id": "9VlluQBCzy1h"
       }
     },
     {
       "cell_type": "markdown",
       "source": [
-        "第1章は終了です。お疲れさまでしたー"
+        "「確率変数（第2章参照）の平均値」を**期待値**と呼びます。  \n",
+        "確率変数がとる値とその値をとる確率の積を全て足し合わせたものです。\n",
+        "\n",
+        "確率変数を$X$としたとき、$E(X)$で表します。  \n",
+        "（詳しくは[こちら](https://bit.ly/3XzgbFj)）"
       ],
       "metadata": {
-        "id": "0gMq1XrFtTpb"
+        "id": "CeEisNjoz2u5"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "第二章で確率変数とともに使う考え方ですので、その時にでも戻ってきてください。"
+      ],
+      "metadata": {
+        "id": "pJ5jXEea24Im"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 期待値の性質"
+      ],
+      "metadata": {
+        "id": "-ktDtHX71hWW"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "確率変数を$X$、定数を$C$としたとき、以下の4つの性質があります。  "
+      ],
+      "metadata": {
+        "id": "QowyjfzO1rDG"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1. $E(C) = C$ \n",
+        "\n",
+        "2. $E(X+C) = E(X) + C$\n",
+        "\n",
+        "3. $E(kX) = kE(X)$  \n",
+        "\n",
+        "4. $E(X+Y) = E(X) + E(Y)$"
+      ],
+      "metadata": {
+        "id": "iUHixNIl183l"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 分散の性質"
+      ],
+      "metadata": {
+        "id": "I5XgYe772evO"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "確率変数を$X$と$Y$（互いに独立）、定数を$C$としたとき、以下の4つの性質があります。  "
+      ],
+      "metadata": {
+        "id": "Yd4JOIEY2ghk"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1. $V(C) = 0$ \n",
+        "\n",
+        "2. $V(X+C) = V(X)$\n",
+        "\n",
+        "3. $V(kX) = k^2E(X)$  \n",
+        "\n",
+        "4. $V(X+Y) = V(X) + V(Y)$"
+      ],
+      "metadata": {
+        "id": "W35Je0gY2j29"
       }
     }
   ]
