--- a/Python/Python_Stats/Stats_3.ipynb
+++ b/Python/Python_Stats/Stats_3.ipynb
@@ -84,7 +84,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "正規分布は次の図のように左右対称の形をしており、横軸は**確率変数**を、縦軸はそのときの**確率密度**を表します。  \n",
+        "正規分布は次の図のように左右対称の形をしており、  \n",
+        "横軸は**確率変数**を、縦軸はそのときの**確率密度**を表します。  \n",
         "（この形は釣鐘型であることから、**Bell shape**)とも呼ばれます）\n",
         "\n",
         "$μ$は中央にあります。  \n",
@@ -134,22 +135,22 @@
         "X = np.linspace(-4, 4, 100)\n",
         "\n",
         "# pdfで確率密度関数を生成\n",
-        "norm_pdf = stats.norm.pdf(x=X, loc=mu, scale=sigma) # 期待値=0, 標準偏差=1\n",
+        "norm_pdf = stats.norm.pdf(x=X, loc=mu, scale=sigma)  # 期待値=0, 標準偏差=1\n",
         "# 確率密度を取得\n",
-        "norm_pdf_max = np.max(norm_pdf) # 確率密度の最大値\n",
+        "norm_pdf_max = np.max(norm_pdf)  # 確率密度の最大値\n",
         "\n",
         "# グラフ描画\n",
         "plt.plot(X, norm_pdf, lw=5, color=\"tab:cyan\")\n",
         "\n",
         "# 垂直線\n",
         "plt.vlines(0, 0, norm_pdf_max+0.05, color=\"black\", lw=0.8)\n",
-        "plt.hlines(0.2, -0.2, 0.2, color=\"black\", lw=1.2) # 水平線\n",
-        "plt.hlines(0.403, -0.2, 0.2, color=\"black\", lw=1.2) # 水平線\n",
+        "plt.hlines(0.2, -0.2, 0.2, color=\"black\", lw=1.2)  # 水平線\n",
+        "plt.hlines(0.403, -0.2, 0.2, color=\"black\", lw=1.2)  # 水平線\n",
         "\n",
         "# 軸目盛\n",
-        "#plt.xticks(color=\"None\") # x軸目盛を消去\n",
-        "plt.yticks(color=\"None\") # y軸目盛を消去\n",
-        "plt.ylim(0, norm_pdf_max + 0.02) # y軸目盛範囲を指定\n",
+        "#plt.xticks(color=\"None\")  # x軸目盛を消去\n",
+        "plt.yticks(color=\"None\")  # y軸目盛を消去\n",
+        "plt.ylim(0, norm_pdf_max + 0.02)  # y軸目盛範囲を指定\n",
         "\n",
         "# テキストを配置\n",
         "plt.text(-0.75, 0.2, '0.2', fontsize = 12) # 0.2\n",
@@ -168,7 +169,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 321
         },
-        "outputId": "ea5099be-77c0-47e1-f549-c3af38d3f8e6"
+        "outputId": "e451e893-9d5d-4a64-cecd-7a911c6eac3f"
       },
       "execution_count": 2,
       "outputs": [
@@ -199,13 +200,13 @@
       "cell_type": "markdown",
       "source": [
         "このように、平均を0、分散を1にすることを**標準化**といいます。  \n",
-        "次の式で表されます。xが変数です。\n",
+        "次の式で表されます。$x$が変数です。\n",
         "\n",
         "$$\n",
         "z=\\frac{x-μ}{σ}\n",
         "$$\n",
         "\n",
-        "この計算を通して得られた値を**z得点**といいます。"
+        "この計算を通して得られた値を**$z$得点**といいます。"
       ],
       "metadata": {
         "id": "BvPFsyXZOott"
@@ -362,14 +363,14 @@
     {
       "cell_type": "code",
       "source": [
-        "norm.isf(q=0.1)    # 上側確率から横軸zの値を求める"
+        "norm.isf(q=0.1)  # 上側確率から横軸zの値を求める"
       ],
       "metadata": {
         "id": "-xD-_0x-VsBU",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6eeb63f5-5977-4b08-e12f-fecb1d7216c7"
+        "outputId": "482005bb-59cc-4007-db40-382133fe82a0"
       },
       "execution_count": 3,
       "outputs": [
@@ -398,16 +399,17 @@
     {
       "cell_type": "code",
       "source": [
-        "Px=(norm.sf(x=1.28)+norm.sf(x=1.29))/2    # z=1.28とz=1.29の上側確率の中間値を求める\n",
-        "print(\"P(z≦{}) = {}\".format(norm.isf(q=0.1),Px))    # 手計算の時はこっち  \n",
-        "print(\"P(z≦{}) = {}\".format(norm.isf(q=0.1),norm.sf(x=norm.isf(q=0.1))))    # 厳密解"
+        "Px=(norm.sf(x=1.28)+norm.sf(x=1.29))/2  # z=1.28とz=1.29の上側確率の中間値を求める\n",
+        "print(\"P(z≦{}) = {}\".format(norm.isf(q=0.1),Px))  # 手計算の時はこっち  \n",
+        "print(\"P(z≦{}) = {}\".format(norm.isf(q=0.1),\n",
+        "                             norm.sf(x=norm.isf(q=0.1))))  # 厳密解"
       ],
       "metadata": {
         "id": "oksYrEd9nMPB",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6bcf38aa-6ce1-4ef7-d602-bde4e570ad62"
+        "outputId": "8732ba32-1ff3-4fd3-a177-cd93191ac0d6"
       },
       "execution_count": 4,
       "outputs": [
@@ -453,14 +455,14 @@
     {
       "cell_type": "code",
       "source": [
-        "print(\"P(x≦172) = P(z≦0) = {}\".format(norm.sf(x=0)))   # 横軸から上側確率を求める"
+        "print(\"P(x≦172) = P(z≦0) = {}\".format(norm.sf(x=0)))  # 横軸から上側確率を求める"
       ],
       "metadata": {
         "id": "n54BADBBXjy4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b1e24524-1705-41f3-f96e-c747895d2897"
+        "outputId": "d5f6188c-58b0-4c7f-db63-25a268f09abd"
       },
       "execution_count": 5,
       "outputs": [
@@ -485,14 +487,15 @@
     {
       "cell_type": "code",
       "source": [
-        "print(\"P(166.5≦x≦177.5) = P(-1≦z≦1)\\n = 2P(0≦z≦1)\\n = 2(P(z≧0) - P(z≧1))\\n = {}\".format(2*(norm.sf(x=0)-norm.sf(x=1))))"
+        "print(\"P(166.5≦x≦177.5) = P(-1≦z≦1)\\n = 2P(0≦z≦1)\\n = 2(P(z≧0) - P(z≧1))\\n = {}\".\n",
+        "      format(2*(norm.sf(x=0)-norm.sf(x=1))))"
       ],
       "metadata": {
         "id": "Tc-zfCxEZT-I",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "78cddd86-d515-47e2-e43d-d4f519757ab7"
+        "outputId": "ebb40185-103b-42c0-8223-ca4dc5197f13"
       },
       "execution_count": 6,
       "outputs": [
@@ -529,7 +532,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "dd2476d2-4b4d-4492-a26d-4c25241f87d8"
+        "outputId": "f6a91daf-c9f9-4f9a-8004-5de835c65a12"
       },
       "execution_count": 7,
       "outputs": [
@@ -565,7 +568,7 @@
     {
       "cell_type": "code",
       "source": [
-        "Z = (79-85)/4    # 標準化\n",
+        "Z = (79-85)/4  # 標準化\n",
         "print(\"P(x≦79) = P(z≦{})\\n = P(z≧{})\\n = {}\".format(Z,-Z,norm.sf(x=-Z)))\n",
         "print(\"A君の下には{}%しかいない\".format(100*norm.sf(x=-Z)))"
       ],
@@ -574,7 +577,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "12de37a1-e5f8-4ec5-c423-7b851ca6dd6b"
+        "outputId": "6f8fd92f-9c0a-4950-e5df-10e0ae6dcaa8"
       },
       "execution_count": 8,
       "outputs": [
@@ -602,7 +605,7 @@
     {
       "cell_type": "code",
       "source": [
-        "Z = norm.isf(q=1-0.95)   # 上位5%となるz軸の座標\n",
+        "Z = norm.isf(q=1-0.95)  # 上位5%となるz軸の座標\n",
         "print(\"(82-x)/10 = {}\".format(Z))\n",
         "print(\"xを求めると、x={}点≒66点\".format(82-1.64*10))"
       ],
@@ -611,7 +614,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b071b5b1-3009-400d-9ee4-ae69c9b38196"
+        "outputId": "4c48c5dc-01b5-4ede-c387-ec4ab727b4a2"
       },
       "execution_count": 9,
       "outputs": [
@@ -660,7 +663,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e4801a38-29bb-4a20-df3c-51c0cc3e8b8e"
+        "outputId": "8fbb7e50-e910-499d-8103-dd937ed9e7a3"
       },
       "execution_count": 10,
       "outputs": [
@@ -714,7 +717,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 363
         },
-        "outputId": "997c46f7-d43a-4c33-d613-9adf6e79a7d2"
+        "outputId": "0efacce9-2227-4865-f9d0-98ad4f7df43a"
       },
       "execution_count": 11,
       "outputs": [
@@ -736,7 +739,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-18d5dcd3-3b7f-4119-bc85-88a77cf9f1bf\">\n",
+              "  <div id=\"df-6924cecb-a56b-4b12-987e-704351101eb2\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -814,7 +817,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-18d5dcd3-3b7f-4119-bc85-88a77cf9f1bf')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6924cecb-a56b-4b12-987e-704351101eb2')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -865,12 +868,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-18d5dcd3-3b7f-4119-bc85-88a77cf9f1bf button.colab-df-convert');\n",
+              "          document.querySelector('#df-6924cecb-a56b-4b12-987e-704351101eb2 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-18d5dcd3-3b7f-4119-bc85-88a77cf9f1bf');\n",
+              "          const element = document.querySelector('#df-6924cecb-a56b-4b12-987e-704351101eb2');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -909,10 +912,11 @@
     {
       "cell_type": "code",
       "source": [
-        "from sklearn.preprocessing import StandardScaler    # 標準化する際に必要\n",
+        "from sklearn.preprocessing import StandardScaler  # 標準化する際に必要\n",
         "\n",
         "scaler = StandardScaler()    # インスタンス化\n",
-        "scaled = scaler.fit_transform(df['標本A'].values.reshape(-1, 1))    # カラムを1つだけ指定する場合は少し複雑\n",
+        "# カラムを1つだけ指定する場合は少し複雑\n",
+        "scaled = scaler.fit_transform(df['標本A'].values.reshape(-1, 1))  \n",
         "df['標本A'] = scaled\n",
         "df"
       ],
@@ -922,7 +926,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 363
         },
-        "outputId": "63dc03b6-a1a3-40f9-a20d-1ffd8a925f79"
+        "outputId": "ba263d75-9139-44c5-d62a-7baba16fadef"
       },
       "execution_count": 12,
       "outputs": [
@@ -944,7 +948,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-e96fd6d7-e9d5-4dba-bf90-d5764d8d3c80\">\n",
+              "  <div id=\"df-0188c4db-4084-469d-a49f-35420f8dd374\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1022,7 +1026,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e96fd6d7-e9d5-4dba-bf90-d5764d8d3c80')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0188c4db-4084-469d-a49f-35420f8dd374')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1073,12 +1077,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-e96fd6d7-e9d5-4dba-bf90-d5764d8d3c80 button.colab-df-convert');\n",
+              "          document.querySelector('#df-0188c4db-4084-469d-a49f-35420f8dd374 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-e96fd6d7-e9d5-4dba-bf90-d5764d8d3c80');\n",
+              "          const element = document.querySelector('#df-0188c4db-4084-469d-a49f-35420f8dd374');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1110,7 +1114,8 @@
       "source": [
         "df = pd.DataFrame(data)\n",
         "\n",
-        "scaled = scaler.fit_transform(df[[\"標本A\",\"標本B\"]])    # カラムを2つ指定する場合は[]の数に注意\n",
+        "# カラムを2つ指定する場合は[]の数に注意\n",
+        "scaled = scaler.fit_transform(df[[\"標本A\",\"標本B\"]])\n",
         "df[[\"標本A\",\"標本B\"]] = scaled\n",
         "df"
       ],
@@ -1120,7 +1125,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 363
         },
-        "outputId": "3097d68e-e103-481c-d177-a74acb511ad1"
+        "outputId": "e1f5ebaa-93da-492a-f148-e31fad7dcd9c"
       },
       "execution_count": 13,
       "outputs": [
@@ -1142,7 +1147,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-c29dd2b4-dfa6-4cbc-aa12-5704325fd7ab\">\n",
+              "  <div id=\"df-8d465f8d-df4d-4bfa-b556-7427a13b89cc\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1220,7 +1225,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c29dd2b4-dfa6-4cbc-aa12-5704325fd7ab')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8d465f8d-df4d-4bfa-b556-7427a13b89cc')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1271,12 +1276,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-c29dd2b4-dfa6-4cbc-aa12-5704325fd7ab button.colab-df-convert');\n",
+              "          document.querySelector('#df-8d465f8d-df4d-4bfa-b556-7427a13b89cc button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-c29dd2b4-dfa6-4cbc-aa12-5704325fd7ab');\n",
+              "          const element = document.querySelector('#df-8d465f8d-df4d-4bfa-b556-7427a13b89cc');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1331,7 +1336,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "271e684d-fc68-40df-bd3c-ca281ff8b5cd"
+        "outputId": "4813108a-3bd8-4d63-9630-4e6baa6af555"
       },
       "execution_count": 14,
       "outputs": [
@@ -1339,7 +1344,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "-2.2400290225826796"
+              "1.0472704961717256"
             ]
           },
           "metadata": {},
@@ -1357,7 +1362,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "65c24129-2df0-4f4f-b0e9-67e5f6db4601"
+        "outputId": "6328c150-908f-484c-9464-fbbc3fff9908"
       },
       "execution_count": 15,
       "outputs": [
@@ -1365,11 +1370,11 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[-0.12694491, -0.34954827,  0.94924101,  0.92748349, -1.02338138],\n",
-              "       [-2.17965972,  1.67178387,  1.96682296,  0.45042066,  0.71171867],\n",
-              "       [ 1.66348792, -0.70447388, -0.92163831,  1.45638508,  0.86488778],\n",
-              "       [-0.35044377, -0.08927082,  0.4675743 ,  0.01231279,  0.55890135],\n",
-              "       [ 1.11164233, -1.71590434,  1.20896963, -0.3400832 , -0.02989068]])"
+              "array([[ 0.12917251,  0.29610638, -0.22968408, -0.39075212, -0.49261663],\n",
+              "       [ 1.70154507,  0.66492582,  0.46568693, -0.44809275, -0.8806179 ],\n",
+              "       [-0.4228124 ,  0.25841838, -1.30603634,  0.50760158, -0.64180367],\n",
+              "       [-0.49622227,  0.74424134, -1.94686336,  0.80604027, -1.39163658],\n",
+              "       [-0.82802689,  0.57393002, -0.6248574 , -1.37865759, -0.83654129]])"
             ]
           },
           "metadata": {},
@@ -1390,14 +1395,14 @@
     {
       "cell_type": "code",
       "source": [
-        "np.random.normal(50,10)    # 偏差値の正規分布からランダム値取得"
+        "np.random.normal(50,10)  # 偏差値の正規分布からランダム値取得"
       ],
       "metadata": {
         "id": "RNCaGtwfVdOI",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "35e7db81-3d2e-4d7e-d9d4-017ee3dea933"
+        "outputId": "a41d294f-254f-4738-9ddb-520cb2dcc061"
       },
       "execution_count": 16,
       "outputs": [
@@ -1405,7 +1410,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "50.57108842763291"
+              "59.064331472224666"
             ]
           },
           "metadata": {},
@@ -1424,30 +1429,30 @@
         "X = np.linspace(0, 80, 100)\n",
         "\n",
         "# pdfで確率密度関数を生成\n",
-        "norm_pdf = stats.norm.pdf(x=X, loc=mu, scale=sigma) # 期待値=0, 標準偏差=1\n",
+        "norm_pdf = stats.norm.pdf(x=X, loc=mu, scale=sigma)  # 期待値=0, 標準偏差=1\n",
         "# 確率密度を取得\n",
-        "norm_pdf_max = np.max(norm_pdf) # 確率密度の最大値\n",
+        "norm_pdf_max = np.max(norm_pdf)  # 確率密度の最大値\n",
         "\n",
         "# グラフ描画\n",
         "plt.plot(X, norm_pdf, lw=5, color=\"tab:cyan\")\n",
         "\n",
         "# 垂直線\n",
         "plt.vlines(50, 0, norm_pdf_max, color=\"black\", lw=0.8)\n",
-        "plt.hlines(0.2, -0.2, 0.2, color=\"black\", lw=1.2) # 水平線\n",
-        "plt.hlines(0.403, -0.2, 0.2, color=\"black\", lw=1.2) # 水平線\n",
+        "plt.hlines(0.2, -0.2, 0.2, color=\"black\", lw=1.2)  # 水平線\n",
+        "plt.hlines(0.403, -0.2, 0.2, color=\"black\", lw=1.2)  # 水平線\n",
         "\n",
         "# 軸目盛\n",
-        "#plt.xticks(color=\"None\") # x軸目盛を消去\n",
-        "#plt.yticks(color=\"None\") # y軸目盛を消去\n",
-        "plt.ylim(0, norm_pdf_max + 0.002) # y軸目盛範囲を指定\n",
+        "# plt.xticks(color=\"None\")  # x軸目盛を消去\n",
+        "# plt.yticks(color=\"None\")  # y軸目盛を消去\n",
+        "plt.ylim(0, norm_pdf_max + 0.002)  # y軸目盛範囲を指定\n",
         "\n",
         "# テキストを配置\n",
-        "#plt.text(-0.75, 0.2, '0.2', fontsize = 12) # 0.2\n",
-        "#plt.text(-0.75, 0.4, '0.4', fontsize = 12) # 0.4\n",
+        "# plt.text(-0.75, 0.2, '0.2', fontsize = 12)  # 0.2\n",
+        "# plt.text(-0.75, 0.4, '0.4', fontsize = 12)  # 0.4\n",
         "\n",
         "\n",
-        "#plt.xlabel(\"z\",labelpad=10,fontsize = 16)\n",
-        "#plt.ylabel(\"f\",fontsize = 16 , rotation=\"horizontal\")\n",
+        "# plt.xlabel(\"z\",labelpad=10,fontsize = 16)\n",
+        "# plt.ylabel(\"f\",fontsize = 16 , rotation=\"horizontal\")\n",
         "plt.title(\"偏差値の正規分布\", x=0.5, y=-0.35, fontsize = 16)\n",
         "\n",
         "plt.show()"
@@ -1458,7 +1463,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 321
         },
-        "outputId": "9b5ed093-01cb-4b27-c4d4-8f95c97293c4"
+        "outputId": "a81dad59-32c4-49c5-b555-338eaeb33ff2"
       },
       "execution_count": 17,
       "outputs": [
