--- a/Python/Python_Stats/Stats_4.ipynb
+++ b/Python/Python_Stats/Stats_4.ipynb
@@ -50,7 +50,7 @@
         "import seaborn as sns\n",
         "from scipy import stats\n",
         "from scipy.stats import norm\n",
-        "from decimal import Decimal, ROUND_HALF_UP, ROUND_HALF_EVEN    # 小数の四捨五入を行うためにimport\n"
+        "from decimal import Decimal, ROUND_HALF_UP, ROUND_HALF_EVEN"
       ],
       "metadata": {
         "id": "RgQjVqKMavH-"
@@ -79,16 +79,26 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### 推定と検定\n",
+        "### 推定と検定\n"
+      ],
+      "metadata": {
+        "id": "uhRS9rdWO15r"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "推測統計には大きく「**推定**」と「**検定**」があります。  \n",
         "\n",
         "推定は、標本統計量を基に母数を推測するものです。  \n",
-        "検定は、母数の性質を想定（**仮定**）し、その仮定が正しいと言えるかどうかを標本を観察することで調べるものです。\n",
+        "\n",
+        "検定は、母数の性質を想定（**仮定**）し、  \n",
+        "その仮定が正しいと言えるかどうかを標本を観察することで調べるものです。\n",
         "\n",
         "ここでは推定について扱います。"
       ],
       "metadata": {
-        "id": "uhRS9rdWO15r"
+        "id": "TLSrpOVob8ZR"
       }
     },
     {
@@ -220,7 +230,7 @@
       "cell_type": "code",
       "source": [
         "print(\"母平均172,母標準偏差5.5\")\n",
-        "print(\"信頼係数95%\")    # 仮定です\n",
+        "print(\"信頼係数95%\")  # 仮定です\n",
         "print(\"正規分布の有意な部分の面積はそれぞれ{}\".format((1-0.95)/2))"
       ],
       "metadata": {
@@ -228,7 +238,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e6e537a1-bcb0-425b-e5f2-c9d8dfc15ea1"
+        "outputId": "a8205245-7879-41da-86f9-50e1b75b8613"
       },
       "execution_count": 2,
       "outputs": [
@@ -263,7 +273,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "85fcc886-a4c6-47c6-f378-4083d9059d07"
+        "outputId": "cbb3f654-c752-4c51-8b55-a49298eca115"
       },
       "execution_count": 3,
       "outputs": [
@@ -291,7 +301,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d670eae6-dc5d-4fb3-f0d2-76b4543c871a"
+        "outputId": "ae53ac7b-9e2d-4fd2-c2fe-e94844600546"
       },
       "execution_count": 4,
       "outputs": [
@@ -317,15 +327,15 @@
     {
       "cell_type": "code",
       "source": [
-        "print(\"X = σ×A+μ = 1.96×5.5+172 = {}\".format(1.96*5.5+172))    # 上方信頼限界\n",
-        "print(\"X = -σ×A+μ = -1.96×5.5+172 = {}\".format(-1.96*5.5+172))    # 下方信頼限界"
+        "print(\"X = σ×A+μ = 1.96×5.5+172 = {}\".format(1.96*5.5+172))  # 上方信頼限界\n",
+        "print(\"X = -σ×A+μ = -1.96×5.5+172 = {}\".format(-1.96*5.5+172))  # 下方信頼限界"
       ],
       "metadata": {
         "id": "ByX9anXnJUje",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5645ba19-1e0f-40a3-c86e-2dae7a92a1e3"
+        "outputId": "acfd1b2f-f012-4139-c1df-b635a1b92d40"
       },
       "execution_count": 5,
       "outputs": [
@@ -343,17 +353,17 @@
       "cell_type": "code",
       "source": [
         "# Pythonによる導出方法\n",
-        "x1,x2 = stats.norm.interval(alpha=0.95,loc=172,scale=5.5)    # 下方信頼限界 , 上方信頼限界\n",
+        "x1,x2 = stats.norm.interval(alpha=0.95,loc=172,scale=5.5)  # 下方信頼限界 , 上方信頼限界\n",
         "\n",
-        "print(\"X = {}\".format(x2))    # 上方信頼限界\n",
-        "print(\"X = {}\".format(x1))    # 下方信頼限界"
+        "print(\"X = {}\".format(x2))  # 上方信頼限界\n",
+        "print(\"X = {}\".format(x1))  # 下方信頼限界"
       ],
       "metadata": {
         "id": "hk4p-6HOdAoQ",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "19e13b50-71f2-4fa8-ab12-30aa295dbb72"
+        "outputId": "df0ab13f-abc0-481f-d7f8-da760444560b"
       },
       "execution_count": 6,
       "outputs": [
@@ -393,20 +403,20 @@
         "# 英語\n",
         "\n",
         "print(\"母平均85,母標準偏差4\")\n",
-        "print(\"信頼係数95%\")    # 仮定です\n",
+        "print(\"信頼係数95%\")  # 仮定です\n",
         "#print(\"正規分布の有意な部分の面積はそれぞれ{}\".format((1-0.95)/2))\n",
         "print(\"上方信頼限界A = 1.96\")\n",
         "print(\"下方信頼限界-A = -1.96\")\n",
         "\n",
-        "print(\"X = σ×A+μ = 1.96×4+85 = {}\".format(1.96*4+85))    # 上方信頼限界\n",
-        "print(\"X = -σ×A+μ = -1.96×4+85 = {}\".format(-1.96*4+85))    # 下方信頼限界"
+        "print(\"X = σ×A+μ = 1.96×4+85 = {}\".format(1.96*4+85))  # 上方信頼限界\n",
+        "print(\"X = -σ×A+μ = -1.96×4+85 = {}\".format(-1.96*4+85))  # 下方信頼限界"
       ],
       "metadata": {
         "id": "d3mw3JG1K8N3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d3fcc66f-2d37-424d-fdb9-ef3cf863f1b6"
+        "outputId": "548c6c0a-7e01-4355-d2ce-1da02ac9e33a"
       },
       "execution_count": 7,
       "outputs": [
@@ -428,17 +438,17 @@
       "cell_type": "code",
       "source": [
         "# Pythonによる導出方法\n",
-        "x1,x2 = stats.norm.interval(alpha=0.95,loc=85,scale=4)    # 下方信頼限界 , 上方信頼限界\n",
+        "x1,x2 = stats.norm.interval(alpha=0.95,loc=85,scale=4)  # 下方信頼限界,上方信頼限界\n",
         "\n",
-        "print(\"X = {}\".format(x2))    # 上方信頼限界\n",
-        "print(\"X = {}\".format(x1))    # 下方信頼限界"
+        "print(\"X = {}\".format(x2))  # 上方信頼限界\n",
+        "print(\"X = {}\".format(x1))  # 下方信頼限界"
       ],
       "metadata": {
         "id": "K8TzTXOOc4lC",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "45261c43-892d-427b-985e-2bdc38cf4917"
+        "outputId": "7a6dc022-e1e2-41d9-9224-4abb6e4ceac0"
       },
       "execution_count": 8,
       "outputs": [
@@ -459,19 +469,19 @@
         "\n",
         "print(\"母平均66,母標準偏差10\")\n",
         "print(\"信頼係数95%\")    # 仮定です\n",
-        "#print(\"正規分布の有意な部分の面積はそれぞれ{}\".format((1-0.95)/2))\n",
+        "# print(\"正規分布の有意な部分の面積はそれぞれ{}\".format((1-0.95)/2))\n",
         "print(\"上方信頼限界A = 1.96\")\n",
         "print(\"下方信頼限界-A = -1.96\")\n",
         "\n",
-        "print(\"X = σ×A+μ = 1.96×10+66 = {}\".format(1.96*10+66))    # 上方信頼限界\n",
-        "print(\"X = -σ×A+μ = -1.96×10+66 = {}\".format(-1.96*10+66))    # 下方信頼限界"
+        "print(\"X = σ×A+μ = 1.96×10+66 = {}\".format(1.96*10+66))  # 上方信頼限界\n",
+        "print(\"X = -σ×A+μ = -1.96×10+66 = {}\".format(-1.96*10+66))  # 下方信頼限界"
       ],
       "metadata": {
         "id": "BNXKMAN0Likt",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "51d092c4-5b9f-46e5-de57-1b7893d5a091"
+        "outputId": "511d6218-7e6b-47d7-b4df-b6de0d37a400"
       },
       "execution_count": 9,
       "outputs": [
@@ -493,17 +503,17 @@
       "cell_type": "code",
       "source": [
         "# Pythonによる導出方法\n",
-        "x1,x2 = stats.norm.interval(alpha=0.95,loc=66,scale=10)    # 下方信頼限界 , 上方信頼限界\n",
+        "x1,x2 = stats.norm.interval(alpha=0.95,loc=66,scale=10)  # 下方信頼限界,上方信頼限界\n",
         "\n",
-        "print(\"X = {}\".format(x2))    # 上方信頼限界\n",
-        "print(\"X = {}\".format(x1))    # 下方信頼限界"
+        "print(\"X = {}\".format(x2))  # 上方信頼限界\n",
+        "print(\"X = {}\".format(x1))  # 下方信頼限界"
       ],
       "metadata": {
         "id": "yexD2vTzc6jh",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ec07d7d9-3035-4388-f45a-a2b8a7141032"
+        "outputId": "fc180ae1-f788-43f0-dc0b-2ef676848079"
       },
       "execution_count": 10,
       "outputs": [
@@ -663,9 +673,9 @@
       "cell_type": "code",
       "source": [
         "# Pythonによる導出方法\n",
-        "x1,x2 = stats.norm.interval(alpha=0.90,loc=93.8,scale=np.sqrt(5560/10))    # 下方信頼限界 , 上方信頼限界\n",
-        "x1 = Decimal(str(x1)).quantize(Decimal('0.1'), rounding=ROUND_HALF_UP)    # 四捨五入\n",
-        "x2 = Decimal(str(x2)).quantize(Decimal('0.1'), rounding=ROUND_HALF_UP)    # 四捨五入\n",
+        "x1,x2 = stats.norm.interval(alpha=0.90,loc=93.8,scale=np.sqrt(5560/10))\n",
+        "x1 = Decimal(str(x1)).quantize(Decimal('0.1'), rounding=ROUND_HALF_UP)\n",
+        "x2 = Decimal(str(x2)).quantize(Decimal('0.1'), rounding=ROUND_HALF_UP)\n",
         "\n",
         "print(\"スクリーン数の母平均の区間推定結果は信頼係数90%のもとで\")\n",
         "print(\"{} ≦ μ ≦ {}\".format(x1,x2))"
@@ -675,7 +685,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b92c5f87-abca-4315-b1ab-a0943626e9c9"
+        "outputId": "830124db-f1a8-4067-d416-c3393e29d243"
       },
       "execution_count": 11,
       "outputs": [
@@ -693,9 +703,9 @@
       "cell_type": "code",
       "source": [
         "# Pythonによる導出方法\n",
-        "x1,x2 = stats.norm.interval(alpha=0.95,loc=93.8,scale=np.sqrt(5560/10))    # 下方信頼限界 , 上方信頼限界\n",
-        "x1 = Decimal(str(x1)).quantize(Decimal('0.1'), rounding=ROUND_HALF_UP)    # 四捨五入\n",
-        "x2 = Decimal(str(x2)).quantize(Decimal('0.1'), rounding=ROUND_HALF_UP)    # 四捨五入\n",
+        "x1,x2 = stats.norm.interval(alpha=0.95,loc=93.8,scale=np.sqrt(5560/10))\n",
+        "x1 = Decimal(str(x1)).quantize(Decimal('0.1'), rounding=ROUND_HALF_UP)\n",
+        "x2 = Decimal(str(x2)).quantize(Decimal('0.1'), rounding=ROUND_HALF_UP)\n",
         "\n",
         "print(\"スクリーン数の母平均の区間推定結果は信頼係数95%のもとで\")\n",
         "print(\"{} ≦ μ ≦ {}\".format(x1,x2))"
@@ -705,7 +715,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4c1d3a2f-af5c-41aa-8e3e-97f72e9ede67"
+        "outputId": "5ffd08e0-a4ea-407e-948c-edeee52b22d5"
       },
       "execution_count": 12,
       "outputs": [
@@ -723,9 +733,9 @@
       "cell_type": "code",
       "source": [
         "# Pythonによる導出方法\n",
-        "x1,x2 = stats.norm.interval(alpha=0.99,loc=93.8,scale=np.sqrt(5560/10))    # 下方信頼限界 , 上方信頼限界\n",
-        "x1 = Decimal(str(x1)).quantize(Decimal('0.1'), rounding=ROUND_HALF_UP)    # 四捨五入\n",
-        "x2 = Decimal(str(x2)).quantize(Decimal('0.1'), rounding=ROUND_HALF_UP)    # 四捨五入\n",
+        "x1,x2 = stats.norm.interval(alpha=0.99,loc=93.8,scale=np.sqrt(5560/10))\n",
+        "x1 = Decimal(str(x1)).quantize(Decimal('0.1'), rounding=ROUND_HALF_UP)\n",
+        "x2 = Decimal(str(x2)).quantize(Decimal('0.1'), rounding=ROUND_HALF_UP)\n",
         "\n",
         "print(\"スクリーン数の母平均の区間推定結果は信頼係数99%のもとで\")\n",
         "print(\"{} ≦ μ ≦ {}\".format(x1,x2))"
@@ -735,7 +745,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5e845c5a-c99e-4629-c976-009d628b8c92"
+        "outputId": "8edb38bb-bb27-4001-a893-caa5cfc79b1c"
       },
       "execution_count": 13,
       "outputs": [
@@ -789,7 +799,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7cfb8056-6142-45a7-89b8-25343b3dbdaa"
+        "outputId": "8b58fbf6-c565-47cc-cd48-3083ff32d348"
       },
       "execution_count": 14,
       "outputs": [
@@ -818,14 +828,14 @@
       "source": [
         "print(\"上方信頼限界A = 1.645\")\n",
         "print(\"下方信頼限界-A = -1.645\") \n",
-        "print(\"上方信頼限界A = {}\".format(norm.isf(q=0.05)))    # 厳密解"
+        "print(\"上方信頼限界A = {}\".format(norm.isf(q=0.05)))  # 厳密解"
       ],
       "metadata": {
         "id": "AMkeFEKIhFEh",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a5d8c825-0843-4534-f10e-af4fa967a086"
+        "outputId": "680cffb2-388e-4939-b850-62c3119cce1b"
       },
       "execution_count": 15,
       "outputs": [
@@ -860,7 +870,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1c6e1015-4201-4dbb-bfe2-8b6c12ffadae"
+        "outputId": "f398cd52-ad81-45ee-916f-46242007a1d1"
       },
       "execution_count": 16,
       "outputs": [
@@ -889,14 +899,14 @@
       "source": [
         "print(\"上方信頼限界A = 2.575\")\n",
         "print(\"下方信頼限界-A = -2.575\") \n",
-        "print(\"上方信頼限界A = {}\".format(norm.isf(q=0.005)))    # 厳密解"
+        "print(\"上方信頼限界A = {}\".format(norm.isf(q=0.005)))  # 厳密解"
       ],
       "metadata": {
         "id": "UdIj_5Uriwe1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "34584921-cd04-44c0-db54-191ce728a19c"
+        "outputId": "2f8bb8a0-6753-4728-9069-7c782c4fe721"
       },
       "execution_count": 17,
       "outputs": [
@@ -934,9 +944,9 @@
       "cell_type": "code",
       "source": [
         "# Pythonによる導出方法\n",
-        "x1,x2 = stats.norm.interval(alpha=0.90,loc=67,scale=9.0/np.sqrt(100))    # 下方信頼限界 , 上方信頼限界\n",
-        "x1 = Decimal(str(x1)).quantize(Decimal('0.1'), rounding=ROUND_HALF_UP)    # 四捨五入\n",
-        "x2 = Decimal(str(x2)).quantize(Decimal('0.1'), rounding=ROUND_HALF_UP)    # 四捨五入\n",
+        "x1,x2 = stats.norm.interval(alpha=0.90,loc=67,scale=9.0/np.sqrt(100))\n",
+        "x1 = Decimal(str(x1)).quantize(Decimal('0.1'), rounding=ROUND_HALF_UP)\n",
+        "x2 = Decimal(str(x2)).quantize(Decimal('0.1'), rounding=ROUND_HALF_UP)\n",
         "\n",
         "print(\"日本人男性の体重の母平均の区間推定結果は信頼係数90%のもとで\")\n",
         "print(\"{}kg ≦ μ ≦ {}kg\".format(x1,x2))"
@@ -946,7 +956,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "820a2471-bd88-4fb3-9409-38b13f306d8b"
+        "outputId": "5bda6722-93f1-4713-e783-cb045a8c82a9"
       },
       "execution_count": 18,
       "outputs": [
@@ -973,9 +983,9 @@
       "cell_type": "code",
       "source": [
         "# Pythonによる導出方法\n",
-        "x1,x2 = stats.norm.interval(alpha=0.95,loc=158,scale=5.3/np.sqrt(400))    # 下方信頼限界 , 上方信頼限界\n",
-        "x1 = Decimal(str(x1)).quantize(Decimal('0.1'), rounding=ROUND_HALF_UP)    # 四捨五入\n",
-        "x2 = Decimal(str(x2)).quantize(Decimal('0.1'), rounding=ROUND_HALF_UP)    # 四捨五入\n",
+        "x1,x2 = stats.norm.interval(alpha=0.95,loc=158,scale=5.3/np.sqrt(400))\n",
+        "x1 = Decimal(str(x1)).quantize(Decimal('0.1'), rounding=ROUND_HALF_UP)\n",
+        "x2 = Decimal(str(x2)).quantize(Decimal('0.1'), rounding=ROUND_HALF_UP)\n",
         "\n",
         "print(\"日本人女性の身長の母平均の区間推定結果は信頼係数95%のもとで\")\n",
         "print(\"{}cm ≦ μ ≦ {}cm\".format(x1,x2))"
@@ -985,7 +995,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "70897eaf-87be-4646-d06a-b8e471df150a"
+        "outputId": "c1fac435-6a81-43ed-f8b4-05476be13b9b"
       },
       "execution_count": 19,
       "outputs": [
@@ -1012,9 +1022,9 @@
       "cell_type": "code",
       "source": [
         "# Pythonによる導出方法\n",
-        "x1,x2 = stats.norm.interval(alpha=0.99,loc=49,scale=6.0/np.sqrt(100))    # 下方信頼限界 , 上方信頼限界\n",
-        "x1 = Decimal(str(x1)).quantize(Decimal('0.1'), rounding=ROUND_HALF_UP)    # 四捨五入\n",
-        "x2 = Decimal(str(x2)).quantize(Decimal('0.1'), rounding=ROUND_HALF_UP)    # 四捨五入\n",
+        "x1,x2 = stats.norm.interval(alpha=0.99,loc=49,scale=6.0/np.sqrt(100))\n",
+        "x1 = Decimal(str(x1)).quantize(Decimal('0.1'), rounding=ROUND_HALF_UP)\n",
+        "x2 = Decimal(str(x2)).quantize(Decimal('0.1'), rounding=ROUND_HALF_UP)\n",
         "\n",
         "print(\"日本人女性の体重の母平均の区間推定結果は信頼係数99%のもとで\")\n",
         "print(\"{}kg ≦ μ ≦ {}kg\".format(x1,x2))"
@@ -1024,7 +1034,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d54b0684-3576-4d48-ac70-a05767abaaf3"
+        "outputId": "e2518a4c-e9a1-44a6-c733-9b5cb92eb56e"
       },
       "execution_count": 20,
       "outputs": [
@@ -1037,15 +1047,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "第4章は終了です。お疲れさまでしたー"
-      ],
-      "metadata": {
-        "id": "n8VSCDmIk8XK"
-      }
     },
     {
       "cell_type": "markdown",
