--- a/Python/Python_Stats/Stats_6.ipynb
+++ b/Python/Python_Stats/Stats_6.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,17 +51,19 @@
         "from scipy import stats\n",
         "from scipy.stats import norm\n",
         "from scipy.stats import chi2\n",
-        "from decimal import Decimal, ROUND_HALF_UP, ROUND_HALF_EVEN    # 小数の四捨五入を行うためにimport\n"
+        "from decimal import Decimal, ROUND_HALF_UP, ROUND_HALF_EVEN"
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
         "## 比率とは？\n",
-        "**比率**(ratio)とは、内閣支持率や工場で発生した不良品の割合など、総数に対して個々のカテゴリが占める割合のことを指します。\n",
+        "**比率**(ratio)とは、内閣支持率や工場で発生した不良品の割合など、  \n",
+        "総数に対して個々のカテゴリが占める割合のことを指します。\n",
         "\n",
         "この比率の推定は、応用されている例は結構あります。  \n",
-        "例えば選挙速報は、開票率1%で当選確実かどうかを判断しています。これは母集団の比率を標本から推定しているためです。  \n",
+        "例えば選挙速報は、開票率1%で当選確実かどうかを判断しています。  \n",
+        "これは母集団の比率を標本から推定しているためです。  \n",
         "\n"
       ],
       "metadata": {
@@ -95,7 +96,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### ① 母集団から無作為抽出して標本を作成\n",
+        "### 母集団から無作為抽出して標本を作成\n",
         "母集団の比率を$p$とし、標本の大きさを$n$とします。"
       ],
       "metadata": {
@@ -120,7 +121,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### ② 標本から推定量を計算\n",
+        "### 標本から推定量を計算\n",
         "今回は標本比率が推定量となります。これを$\\hat{p}$とします。  \n",
         "\n",
         "今回の集計では大谷翔平選手の知名度が66.2%であったので、これを標本比率とします。  \n",
@@ -133,7 +134,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### ③ 信頼区間を設けて母数を推定\n",
+        "### 信頼区間を設けて母数を推定\n",
         "信頼区間は95%とすることが多いです。"
       ],
       "metadata": {
@@ -143,7 +144,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### ④ 推定量の標本分布を考える ※最重要\n",
+        "### 推定量の標本分布を考える ※最重要\n",
         "標本比率の標本分布について考えてみましょう。  \n",
         "**ここが最重要です。**"
       ],
@@ -234,7 +235,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### ⑤ 信頼区間がとりうる値を標本分布から算出する\n",
+        "### 信頼区間がとりうる値を標本分布から算出する\n",
         "あとは$p$に対して計算して値を出していくだけです。\n",
         "\n",
         "$$\n",
@@ -313,9 +314,9 @@
       "cell_type": "code",
       "source": [
         "# Pythonによる導出方法\n",
-        "x1,x2 = stats.binom.interval(alpha, n, p)    # 下方信頼限界 , 上方信頼限界\n",
-        "x1 = Decimal(str(x1)).quantize(Decimal('0.01'), rounding=ROUND_HALF_UP)    # 四捨五入\n",
-        "x2 = Decimal(str(x2)).quantize(Decimal('0.01'), rounding=ROUND_HALF_UP)    # 四捨五入\n",
+        "x1,x2 = stats.binom.interval(alpha, n, p)  # 下方信頼限界 , 上方信頼限界\n",
+        "x1 = Decimal(str(x1)).quantize(Decimal('0.01'),rounding=ROUND_HALF_UP)\n",
+        "x2 = Decimal(str(x2)).quantize(Decimal('0.01'), rounding=ROUND_HALF_UP)\n",
         "\n",
         "print(\"大谷翔平選手の知名度は信頼係数95%のもとで\")\n",
         "print(\"{} %≦ μ ≦ {}%\".format(x1/n*100,x2/n*100))"
@@ -394,7 +395,7 @@
       "cell_type": "code",
       "source": [
         "# Pythonによる導出方法\n",
-        "x1,x2 = stats.binom.interval(alpha, n, p)    # 下方信頼限界 , 上方信頼限界\n",
+        "x1,x2 = stats.binom.interval(alpha, n, p)  # 下方信頼限界 , 上方信頼限界\n",
         "\n",
         "print(\"このテレビ番組の視聴率は信頼係数95%のもとで\")\n",
         "print(\"{} %≦ μ ≦ {}%\".format(x1/n*100,x2/n*100))"
@@ -463,7 +464,7 @@
       "cell_type": "code",
       "source": [
         "# Pythonによる導出方法\n",
-        "x1,x2 = stats.binom.interval(alpha, n, p)    # 下方信頼限界 , 上方信頼限界\n",
+        "x1,x2 = stats.binom.interval(alpha, n, p)  # 下方信頼限界 , 上方信頼限界\n",
         "\n",
         "print(\"「おいしい」と評価する割合は信頼係数95%のもとで\")\n",
         "print(\"{} %≦ μ ≦ {}%\".format(x1/n*100,x2/n*100))"
@@ -532,7 +533,7 @@
       "cell_type": "code",
       "source": [
         "# Pythonによる導出方法\n",
-        "x1,x2 = stats.binom.interval(alpha, n, p)    # 下方信頼限界 , 上方信頼限界\n",
+        "x1,x2 = stats.binom.interval(alpha, n, p)  # 下方信頼限界 , 上方信頼限界\n",
         "\n",
         "print(\"6の目が出る割合は信頼係数95%のもとで\")\n",
         "print(\"{} %≦ μ ≦ {}%\".format(x1/n*100,x2/n*100))"
@@ -579,10 +580,11 @@
       "cell_type": "markdown",
       "source": [
         "### カイ二乗\n",
-        "標準化した変数の二乗値をいくつか足し合わせて変数が従う確率分布を**カイ二乗分布**（**$\\chi^2$分布**）といいます。\n",
+        "標準化した変数の二乗値をいくつか足し合わせて変数が従う確率分布を  \n",
+        "**カイ二乗分布**（**$\\chi^2$分布**）といいます。\n",
         "\n",
         "$$\n",
-        "\\chi^2 = \\sum_{i=1}^{n} (\\frac{X_i-μ}{σ})^2\n",
+        "\\chi^2 = \\sum_{i=1}^{n} (\\frac{X_i-μ}{σ})^2=\\frac{(n-1)s^{'2}}{σ^2}\n",
         "$$"
       ],
       "metadata": {
@@ -624,7 +626,7 @@
         "\n",
         "# 自由度 n=1〜5 までのグラフを描画\n",
         "for i in k_deg:\n",
-        "    plt.plot(x, chi2.pdf(x, i), linestyle='--', label='自由度 k={}'.format(i))\n",
+        "    plt.plot(x, chi2.pdf(x, i), linestyle='--',label='自由度 k={}'.format(i))\n",
         "\n",
         "\"\"\"\n",
         "****************************************\n",
@@ -632,9 +634,9 @@
         "****************************************\n",
         "\"\"\"\n",
         "plt.title(\"$χ^2$分布\")   # タイトル\n",
-        "plt.xlim(0, 20)       # X軸範囲\n",
-        "plt.ylim(0, 1)       # Y軸範囲\n",
-        "plt.legend()         # 凡例\n",
+        "plt.xlim(0, 20)  # X軸範囲\n",
+        "plt.ylim(0, 1)  # Y軸範囲\n",
+        "plt.legend()  # 凡例\n",
         "plt.show()"
       ],
       "metadata": {
@@ -827,9 +829,9 @@
         "# dictionaryからDataFrameを作る\n",
         "\n",
         "data = {\n",
-        "    \"都道府県\":[\"兵庫県\",\"大阪県\",\"奈良県\",\"岩手県\",\"千葉県\",\"茨城県\",\"福岡県\",\"山梨県\",\"滋賀県\",\"鳥取県\"],\n",
+        "    \"都道府県\":[\"兵庫県\",\"大阪県\",\"奈良県\",\"岩手県\",\"千葉県\",\n",
+        "                \"茨城県\",\"福岡県\",\"山梨県\",\"滋賀県\",\"鳥取県\"],\n",
         "    \"全スクリーン数\" : [126,224,34,25,199,89,178,14,38,11]\n",
-        "    \n",
         "}\n",
         "\n",
         "df = pd.DataFrame(data)\n",
@@ -1055,9 +1057,9 @@
     {
       "cell_type": "code",
       "source": [
-        "x1,x2= stats.chi2.interval(alpha=0.95, df=n-1) #下側2.5%点,上側2.5%点\n",
-        "x1 = Decimal(str(x1)).quantize(Decimal('0.01'), rounding=ROUND_HALF_UP) # 四捨五入\n",
-        "x2 = Decimal(str(x2)).quantize(Decimal('0.01'), rounding=ROUND_HALF_UP) # 四捨五入\n",
+        "x1,x2= stats.chi2.interval(alpha=0.95, df=n-1)  # 下側2.5%点,上側2.5%点\n",
+        "x1 = Decimal(str(x1)).quantize(Decimal('0.01'),rounding=ROUND_HALF_UP)\n",
+        "x2 = Decimal(str(x2)).quantize(Decimal('0.01'),rounding=ROUND_HALF_UP)\n",
         "\n",
         "print(\"下側2.5%点は{}です\".format(x1))\n",
         "print(\"上側2.5%点は{}です\".format(x2))"
@@ -1086,8 +1088,8 @@
       "source": [
         "up = (n-1)*s/float(x1)\n",
         "bottom = (n-1)*s/float(x2)\n",
-        "up = Decimal(str(up)).quantize(Decimal('0.01'), rounding=ROUND_HALF_UP)    # 四捨五入\n",
-        "bottom = Decimal(str(bottom)).quantize(Decimal('0.01'), rounding=ROUND_HALF_UP)    # 四捨五入\n",
+        "up = Decimal(str(up)).quantize(Decimal('0.01'),rounding=ROUND_HALF_UP)\n",
+        "bottom = Decimal(str(bottom)).quantize(Decimal('0.01'),rounding=ROUND_HALF_UP)\n",
         "\n",
         "print(\"{}≦σ≦{}\".format(bottom,up))\n",
         "print(\"信頼係数95%\")"
@@ -1136,9 +1138,10 @@
         "# dictionaryからDataFrameを作る\n",
         "\n",
         "data = {\n",
-        "    \"都道府県\":[\"秋田県\",\"青森県\",\"島根県\",\"沖縄県\",\"北海道\",\"高知県\",\"東京都\",\"大阪府\",\"石川県\",\"愛知県\"],\n",
-        "    \"運転免許保有者割合（%）\" : [68.1,66.4,67.3,65.7,63.4,67.8,57.6,57.9,68.7,68.1]\n",
-        "    \n",
+        "    \"都道府県\":[\"秋田県\",\"青森県\",\"島根県\",\"沖縄県\",\"北海道\",\n",
+        "                \"高知県\",\"東京都\",\"大阪府\",\"石川県\",\"愛知県\"],\n",
+        "    \"運転免許保有者割合（%）\" : [68.1,66.4,67.3,65.7,63.4,\n",
+        "                                 67.8,57.6,57.9,68.7,68.1]\n",
         "}\n",
         "\n",
         "df = pd.DataFrame(data)\n",
@@ -1347,10 +1350,12 @@
     {
       "cell_type": "code",
       "source": [
+        "menkyo_per = df_kanto[\"運転免許保有者割合（%）\"]\n",
+        "\n",
         "n = len(df)\n",
         "print(\"標本の大きさ：{}\".format(n))\n",
         "\n",
-        "s = stats.tvar(df[\"運転免許保有者割合（%）\"])\n",
+        "s = stats.tvar(menkyo_per)\n",
         "print(\"不偏分散：{}\".format(s))"
       ],
       "metadata": {
@@ -1375,9 +1380,9 @@
     {
       "cell_type": "code",
       "source": [
-        "x1,x2= stats.chi2.interval(alpha=0.95, df=n-1) #下側2.5%点,上側2.5%点\n",
-        "x1 = Decimal(str(x1)).quantize(Decimal('0.01'), rounding=ROUND_HALF_UP) # 四捨五入\n",
-        "x2 = Decimal(str(x2)).quantize(Decimal('0.01'), rounding=ROUND_HALF_UP) # 四捨五入\n",
+        "x1,x2= stats.chi2.interval(alpha=0.95, df=n-1)  #下側2.5%点,上側2.5%点\n",
+        "x1 = Decimal(str(x1)).quantize(Decimal('0.01'),rounding=ROUND_HALF_UP)\n",
+        "x2 = Decimal(str(x2)).quantize(Decimal('0.01'), rounding=ROUND_HALF_UP)\n",
         "\n",
         "print(\"下側2.5%点は{}です\".format(x1))\n",
         "print(\"上側2.5%点は{}です\".format(x2))"
@@ -1406,9 +1411,8 @@
       "source": [
         "up = (n-1)*s/float(x1)\n",
         "bottom = (n-1)*s/float(x2)\n",
-        "up = Decimal(str(up)).quantize(Decimal('0.01'), rounding=ROUND_HALF_UP)    # 四捨五入\n",
-        "bottom = Decimal(str(bottom)).quantize(Decimal('0.01'), rounding=ROUND_HALF_UP)    # 四捨五入\n",
-        "\n",
+        "up = Decimal(str(up)).quantize(Decimal('0.01'),rounding=ROUND_HALF_UP)\n",
+        "bottom = Decimal(str(bottom)).quantize(Decimal('0.01'),rounding=ROUND_HALF_UP)\n",
         "print(\"{}%≦σ≦{}%\".format(bottom,up))\n",
         "print(\"信頼係数95%\")"
       ],
@@ -1457,10 +1461,10 @@
         "# dictionaryからDataFrameを作る\n",
         "\n",
         "data = {\n",
-        "    \"都道府県\":[\"秋田県\",\"青森県\",\"島根県\",\"沖縄県\",\"北海道\",\"高知県\",\"東京都\",\"大阪府\",\"石川県\",\"愛知県\"],\n",
+        "    \"都道府県\":[\"秋田県\",\"青森県\",\"島根県\",\"沖縄県\",\"北海道\",\n",
+        "                \"高知県\",\"東京都\",\"大阪府\",\"石川県\",\"愛知県\"],\n",
         "    \"15歳以上の平均睡眠時間（男）\" : [487,486,480,465,473,478,455,460,467,457],\n",
         "    \"15歳以上の平均睡眠時間（女）\" : [475,470,461,449,465,464,452,448,451,448]\n",
-        "    \n",
         "}\n",
         "\n",
         "df = pd.DataFrame(data)\n",
@@ -1689,10 +1693,12 @@
     {
       "cell_type": "code",
       "source": [
+        "male_sleep = df_kanto[\"15歳以上の平均睡眠時間（男）\"]\n",
+        "\n",
         "n = len(df)\n",
         "print(\"標本の大きさ：{}\".format(n))\n",
         "\n",
-        "s = stats.tvar(df[\"15歳以上の平均睡眠時間（男）\"])\n",
+        "s = stats.tvar(male_sleep)\n",
         "print(\"不偏分散：{}\".format(s))"
       ],
       "metadata": {
@@ -1717,9 +1723,9 @@
     {
       "cell_type": "code",
       "source": [
-        "x1,x2= stats.chi2.interval(alpha=0.95, df=n-1) #下側2.5%点,上側2.5%点\n",
-        "x1 = Decimal(str(x1)).quantize(Decimal('0.01'), rounding=ROUND_HALF_UP) # 四捨五入\n",
-        "x2 = Decimal(str(x2)).quantize(Decimal('0.01'), rounding=ROUND_HALF_UP) # 四捨五入\n",
+        "x1,x2= stats.chi2.interval(alpha=0.95, df=n-1)  # 下側2.5%点,上側2.5%点\n",
+        "x1 = Decimal(str(x1)).quantize(Decimal('0.01'),rounding=ROUND_HALF_UP)\n",
+        "x2 = Decimal(str(x2)).quantize(Decimal('0.01'), rounding=ROUND_HALF_UP)\n",
         "\n",
         "print(\"下側2.5%点は{}です\".format(x1))\n",
         "print(\"上側2.5%点は{}です\".format(x2))"
@@ -1748,8 +1754,8 @@
       "source": [
         "up = (n-1)*s/float(x1)\n",
         "bottom = (n-1)*s/float(x2)\n",
-        "up = Decimal(str(up)).quantize(Decimal('0.01'), rounding=ROUND_HALF_UP)    # 四捨五入\n",
-        "bottom = Decimal(str(bottom)).quantize(Decimal('0.01'), rounding=ROUND_HALF_UP)    # 四捨五入\n",
+        "up = Decimal(str(up)).quantize(Decimal('0.01'),rounding=ROUND_HALF_UP)\n",
+        "bottom = Decimal(str(bottom)).quantize(Decimal('0.01'),rounding=ROUND_HALF_UP)\n",
         "\n",
         "print(\"{}時間≦σ≦{}時間\".format(bottom,up))\n",
         "print(\"信頼係数95%\")"
@@ -1796,10 +1802,12 @@
     {
       "cell_type": "code",
       "source": [
+        "female_sleep = df_kanto[\"15歳以上の平均睡眠時間（女）\"]\n",
+        "\n",
         "n = len(df)\n",
         "print(\"標本の大きさ：{}\".format(n))\n",
         "\n",
-        "s = stats.tvar(df[\"15歳以上の平均睡眠時間（女）\"])\n",
+        "s = stats.tvar(female_sleep)\n",
         "print(\"不偏分散：{}\".format(s))"
       ],
       "metadata": {
@@ -1824,9 +1832,9 @@
     {
       "cell_type": "code",
       "source": [
-        "x1,x2= stats.chi2.interval(alpha=0.95, df=n-1) #下側2.5%点,上側2.5%点\n",
-        "x1 = Decimal(str(x1)).quantize(Decimal('0.01'), rounding=ROUND_HALF_UP) # 四捨五入\n",
-        "x2 = Decimal(str(x2)).quantize(Decimal('0.01'), rounding=ROUND_HALF_UP) # 四捨五入\n",
+        "x1,x2= stats.chi2.interval(alpha=0.95, df=n-1)  # 下側2.5%点,上側2.5%点\n",
+        "x1 = Decimal(str(x1)).quantize(Decimal('0.01'), rounding=ROUND_HALF_UP)\n",
+        "x2 = Decimal(str(x2)).quantize(Decimal('0.01'),rounding=ROUND_HALF_UP)\n",
         "\n",
         "print(\"下側2.5%点は{}です\".format(x1))\n",
         "print(\"上側2.5%点は{}です\".format(x2))"
@@ -1855,8 +1863,8 @@
       "source": [
         "up = (n-1)*s/float(x1)\n",
         "bottom = (n-1)*s/float(x2)\n",
-        "up = Decimal(str(up)).quantize(Decimal('0.01'), rounding=ROUND_HALF_UP)    # 四捨五入\n",
-        "bottom = Decimal(str(bottom)).quantize(Decimal('0.01'), rounding=ROUND_HALF_UP)    # 四捨五入\n",
+        "up = Decimal(str(up)).quantize(Decimal('0.01'),rounding=ROUND_HALF_UP)\n",
+        "bottom = Decimal(str(bottom)).quantize(Decimal('0.01'),rounding=ROUND_HALF_UP)\n",
         "\n",
         "print(\"{}時間≦σ≦{}時間\".format(bottom,up))\n",
         "print(\"信頼係数95%\")"
@@ -1890,15 +1898,6 @@
       },
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "第6章は終了です。お疲れさまでしたー"
-      ],
-      "metadata": {
-        "id": "n8VSCDmIk8XK"
-      }
     },
     {
       "cell_type": "markdown",
